@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1442 2003/09/10 22:32:51 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1443 2003/09/11 06:56:40 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-11 11:30 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
+  * harbour/harbour.spec
+    * small fix in auto platform detection (thanks to Tomaz Zupan)
+  * harbour/make_tgz.sh
+    * added auto platform detection 
 
 2003-09-10 23:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbapi.h
